include/dss_capi.h

    DSS_CAPI_DLL void CtrlQueue_ClearQueue(void);
    DSS_CAPI_DLL void CtrlQueue_Delete(int32_t ActionHandle);
    /*
    Code for the active action. Long integer code to tell the control device what to do
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Get_ActionCode(void);
    /*
    Handle (User defined) to device that must act on the pending action.
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Get_DeviceHandle(void);
    /*
    Number of Actions on the current actionlist (that have been popped off the control queue by CheckControlActions)
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Get_NumActions(void);
    /*
    Push a control action onto the DSS control queue by time, action code, and device handle (user defined). Returns Control Queue handle.
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Push(int32_t Hour, double Seconds, int32_t ActionCode, int32_t DeviceHandle);
    DSS_CAPI_DLL void CtrlQueue_Show(void);
    DSS_CAPI_DLL void CtrlQueue_ClearActions(void);
    /*
    Pops next action off the action list and makes it the active action. Returns zero if none.
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Get_PopAction(void);
    /*
    Set the active action by index
    */
    DSS_CAPI_DLL void CtrlQueue_Set_Action(int32_t Param1);
    /*
    Number of items on the OpenDSS control Queue
    */
    DSS_CAPI_DLL int32_t CtrlQueue_Get_QueueSize(void);
    DSS_CAPI_DLL void CtrlQueue_DoAllQueue(void);
    /*
    Array of strings containing the entire queue in CSV format
    */
    DSS_CAPI_DLL void CtrlQueue_Get_Queue(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as CtrlQueue_Get_Queue but using the global buffer interface for results
    */
    DSS_CAPI_DLL void CtrlQueue_Get_Queue_GR(void);